formend question curd

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -5,6 +5,8 @@
 // Variables
 @import "variables";
 
+@import "~simplemde/dist/simplemde.min.css";
+
 // Bootstrap
 // @import "~bootstrap/scss/bootstrap";
 
